feat: support postgres find. join route2, array_contains_all